--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ otp_release:
   - 20.0
 
 before_script:
+  - MIX_ENV=test mix deps.compile
+  - MIX_ENV=test mix compile
   - MIX_ENV=test iex --sname vayne-1@localhost -S mix &
   - MIX_ENV=test iex --sname vayne-3@localhost -S mix &
   - touch .test_node.list
